client/src/Styles/Cort/PaymentForm.css
:root {
  --form-height: calc(100% - 74px)
}

#paymentForm #arrow {
  display: none;
}

#paymentForm {
  position: fixed;
  right: 0;
  bottom: 0;
  height: var(--form-height);
  width: 30%;
  background-color: lightsalmon;
  display: flex;
  flex-direction: column;
  text-align: center;
  font-family: 'Caveat', cursive;
}

#paymentForm div {
  margin: auto;
  display: block;
  font-size: 25px;
  width: 80%;
}

#paymentForm div:nth-child(2) div {
  display: flex;
  width: 100%;
}

#paymentForm div #house {
  width: 50%;
}


#paymentForm p {
  font-size: 30px;
  margin: 20px 0;
}

#paymentForm #select {
  font-family: 'Caveat', bolt;
  font-size: 25px;
}

#paymentForm input {
  outline: none;
  border: none;
  font-size: 20px;
  border-radius: 20px;
  width: 100%;
  font-family: 'Caveat', cursive;
  text-align: center;
}

#paymentForm input.error {
  border: 2px red solid;
}

#paymentForm button {
  outline: none;
  border: 3px double greenyellow;
  font-size: 18px;
  color: greenyellow;
  background-color: green;
  border-radius: 20px;
  width: 120px;
  margin: 0 auto;
  padding: 4px;
  font-size: 18px;
  font-family: 'Caveat', cursive;
  transition: all 1s;
}

#paymentForm button:hover {
  width: 100%;
  padding: 7px;
  background-color: yellowgreen;
  border: 3px double green;
  color: green;
}

@media screen and (max-width:767px) {
  #paymentForm #arrow {
    display: flex;
    position: fixed;
    bottom: 287px;
    left: calc(50% - 12px);
    border-radius: 50%;
    background-color: red;
    transition: all 1s;
    width: 24px;
    height: 24px;
  }

  #paymentForm #arrow svg {
    transition: all 1s;
    transform: rotateX(0deg);
  }

  #paymentForm #arrow.hide {
    bottom: -12px;
  }

  #paymentForm #arrow.hide svg {
    transform: rotateX(180deg);

  }

  #paymentForm #select {
    font-size: 20px;
  }

  #paymentForm div:nth-child(4) div {
    width: fit-content;
    height: 40px;
    padding: 3px 15px 3px 5px;
  }

  #paymentForm {
    width: 100%;
    height: 300px;
    transition: all 1s;
  }

  #paymentForm.hide {
    height: 0;
  }

  #paymentForm div,
  #paymentForm p {
    font-size: 20px;
  }

  #paymentForm button {
    font-size: 12px;
  }
}

